# PascalSentenceDataset

./: README.md  pascal_sentence_dataset.py  pyproject.toml
