[tool.poetry]
name = "pascalsentencedataset"
version = "0.1.0"
description = ""
authors = ["gorjanradevski <gorjanradevski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pyquery = "^1.4"
requests = "^2.21"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
